--- a/works.html
+++ b/works.html
@@ -24,9 +24,8 @@
                         <img src="./photo/logo.jpg" alt="VideoProfi" class="logo-photo" width="70" height="70">
                     </a>
                     <ul class="list-nav">
-                        <li><a class="nav link" href="./index.html">Главная</a></li>
-                        <li class="current-link-item"><a class="current link" href="./works.html" target="_blank">Работы</a></li>
-                        <li><a class="nav link" href="#">Контакты</a></li>
+                        <li><a class="nav link" href="./index.html">Головна</a></li>
+                        <li class="current-link-item"><a class="current link" href="./works.html" target="_blank">Ціни</a></li>
                     </ul>
                 </nav>
                 <button type="button" class="menu-btn" data-menu-button aria-expanded="false">
@@ -67,14 +66,12 @@
                 <div class="mob-menu-nav-list">
                     <ul class="mob-menu-list">
                         <li class="mob-menu-item">
-                            <a class="mob-menu-link" href="./index.html">Главная</a>
+                            <a class="mob-menu-link" href="./index.html">Головна</a>
                         </li>
                         <li class="mob-menu-item">
-                            <a class="mob-menu-link" href="./works.html" target="_blank">Работы</a>
+                            <a class="mob-menu-link" href="./works.html" target="_blank">Ціни</a>
                         </li>
-                        <li class="mob-menu-item">
-                            <a class="mob-menu-link" href="#">Контакты</a>
-                        </li>
+                        
                     </ul>
                 </div>
                 <div class="mob-menu-links-list">
@@ -103,9 +100,14 @@
     </header>
     <!--Основная информация-->
     <main>
-        <section>
-            <h1 class="works-title">Данная страница временно находится в разработке</h1>
-            <p class="works-text">Извините за неудобности</p>
+        <section class="price-list">
+            <h1 class="works-title">Наш прайс</h1>
+            <p class="works-text-main">Перезапис будь-яких касет (VHS, VHS-C, S-VHS, Digital 8, Hi-8, 8, mini-DV) на флешку, HDD всього - 
+                <p class="price">97грн/год.</p></p>
+            <p class="works-text">Розбивка на сюжети (в т.ч. вирізати невдалі моменти (камера в підлогу, стелю)) - 157грн/год.</p>
+            <p class="works-text">Професійні касети (Betacam, DVC, DVC-pro) - 127грн/год.</p>
+            <p class="works-text">Термінова оцифровка - 157грн/год.</p>
+
         </section>
         <!-- <section class="works">
             этот заголовок будет скрыт
@@ -450,7 +452,7 @@
                     <address class="address">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/%D0%9E%D1%86%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D0%BA%D0%B0+%D0%B2%D1%96%D0%B4%D0%B5%D0%BE/@50.4642849,30.3614922,19.96z/data=!4m13!1m7!3m6!1s0x40d4cc95111d06b3:0x65bfeebc7718ec5c!2z0LHRg9C7LiDQkNC60LDQtNC10LzQuNC60LAg0JLQtdGA0L3QsNC00YHQutC-0LPQviwgNznQkCwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4640913!4d30.3615015!3m4!1s0x40d4cc953df7cd3b:0x9f3d9708cd7d9ba1!8m2!3d50.4641106!4d30.3618205"
-                            class="location">г. Киев, бульвар Академика Вернадского 79а</a>
+                            class="location">м. Київ, бульвар Академіка Вернадського 79а</a>
                         <ul class="footer-contacts-list">
                             <li>
                                 <a class="footer-contact-link" href="tel:+380503844334" title="Позвонить">+38 050 384 43
@@ -464,7 +466,7 @@
                     </address>
                 </div>
                 <div class="footer-socialnet">
-                    <p class="footer-text">Присоединяйтесь</p>
+                    <p class="footer-text">Приєднуйтесь</p>
                     <ul class="list social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
